--- a/README.org
+++ b/README.org
@@ -27,7 +27,7 @@ Elfeed Tube is useful for any Youtube RSS feed, but it works particularly well f
   - [[#putting-it-together][Putting it together]]
 - [[#setup][Setup]]
   - [[#set-up-with-use-package][Set up with =use-package=]]
-  - [[#set-up-without][Set up without]]
+  - [[#set-up-without-use-package][Set up without =use-package=]]
 - [[#usage][Usage]]
   - [[#step-i-add-youtube-subscriptions-to-elfeed][Step I: Add Youtube subscriptions to Elfeed]]
   - [[#step-ii-use-elfeed-as-usual][Step II: Use Elfeed as usual]]
@@ -290,15 +290,20 @@ You can independently control auto/manual fetching of info and auto/manual savin
 ** (Optional) Elfeed Tube for any video
 You can call =elfeed-tube-fetch= outside of Elfeed to read an abritrary Youtube video URL (not just feed entries) and produce an Elfeed-like entry buffer for it with description, other metadata and live transcripts etc. Essentially you can use Elfeed Tube as a Youtube viewer. This feature is currently experimental.
 ** Commands summary
-| Command                     | Description                                  | Where              | suggested key-binding   |
-|-----------------------------+----------------------------------------------+--------------------+-------------------------|
-| =elfeed-tube-add-feeds=       | Find youtube feeds from search queries       | Anywhere in Emacs  | N/A                     |
-| =elfeed-tube-fetch=           | Fetch info for any video                     | Anywhere in Emacs  | N/A                     |
-| =elfeed-tube-fetch= (again)   | Fetch video info for Elfeed entry (optional) | Anywhere in Elfeed | ~F~                       |
-| =elfeed-tube-save=            | Manually save entry to Elfeed DB (optional)  | In an Elfeed entry | ~C-x C-s~                 |
-| =elfeed-tube-mpv-where=       | Jump to current video location in transcript | In an Elfeed entry | ~C-c C-w~                 |
-| =elfeed-tube-mpv-follow-mode= | Continuously track a video playing in MPV    | In an Elfeed entry | ~C-c C-f~                 |
-| =elfeed-tube-mpv=           | Open video at time or seek video to this time | In an Elfeed entry | ~mouse-1~, ~mouse-2~ or ~RET~ |
+=elfeed-tube= commands:
+| Command                     | Description                                   | Where              | suggested key-binding   |
+|-----------------------------+-----------------------------------------------+--------------------+-------------------------|
+| =elfeed-tube-add-feeds=       | Find youtube feeds from search queries        | Anywhere in Emacs  | N/A                     |
+| =elfeed-tube-fetch=           | Fetch info for any video                      | Anywhere in Emacs  | N/A                     |
+| =elfeed-tube-fetch= (again)   | Fetch video info for Elfeed entry (optional)  | Anywhere in Elfeed | ~F~                       |
+| =elfeed-tube-save=            | Manually save entry to Elfeed DB (optional)   | In an Elfeed entry | ~C-x C-s~                 |
+
+=elfeed-tube-mpv= commands, for live transcripts
+| Command                     | Description                                   | Where              | suggested key-binding   |
+|-----------------------------+-----------------------------------------------+--------------------+-------------------------|
+| =elfeed-tube-mpv=             | Open video at time or seek video to this time | In an Elfeed entry | ~mouse-1~, ~mouse-2~ or ~RET~ |
+| =elfeed-tube-mpv-where=       | Jump to current video location in transcript  | In an Elfeed entry | ~C-c C-w~                 |
+| =elfeed-tube-mpv-follow-mode= | Continuously track a video playing in MPV     | In an Elfeed entry | ~C-c C-f~                 |
 
 * Customization
 Elfeed Tube has opinionated defaults but is fully configurable through the Customize interface (=M-x customize=). Here are some examples:
@@ -394,6 +399,40 @@ The top comments are occasionally useful, especially on technical videos. I migh
 - Ajay Ramachandran for writing and running [[https://github.com/ajayyy/SponsorBlock][Sponsorblock]]
 - The kind folks maintaining [[https://invidious.io/][Invidious]] instances, [[https://youtube-dl.org/][youtube-dl]] and [[https://github.com/yt-dlp/yt-dlp/][yt-dlp]]
 
+* COMMENT Notes
+
+** TODO Specify what data to fetch per feed instead of globally.
+** TODO Elfeed search keyword for video duration:
+("=crafters <25min" should return videos in the Elfeed DB from the "System Crafters" Youtube channel feed that are under 25 minutes long, etc.)
+
+** TODO Support for Youtube's official API
+** TODO Re-punctuating auto-generated captions
+Using a [[https://github.com/ottokart/punctuator2][punctuator2]] web service
+
+** TODO Chapter extraction
+From the descriptions.
+- Store these or generate in =elfeed-tube-show=?
+
+** TODO Chapter display
+- User option for timestamp chunking
+- Formatting this and timestamps simultaneously?
+
+** TODO =imenu= support
+Headings:
+- All message-header-name fields
+- Chapters?
+
+** TODO Backfill Youtube feeds
+** TODO Download features [0/3]
+:PROPERTIES:
+:COOKIE_DATA: todo recursive
+:END:
+*** TODO Download button?
+- Display as enclosures?
+*** TODO Download region?
+*** TODO User option for download formats?
+
+** Local
 # Local Variables:
 # eval: (when (featurep 'toc-org-mode) (toc-org-mode 1))
 # End:
